[package]
name = "core-to-core-latency-plus"
description = "This program is used to calculate the communication latency between CPU cores."
authors = ["Karminski <code.karminski@outlook.com>"]
repository = "https://github.com/KCORES/core-to-core-latency-plus"
license = "MIT"
readme = "README-en-us.md"
version = "0.1.15"
edition = "2021"
exclude = ["/results"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
core_affinity = "0.5"
quanta = "0.10"
clap = { version = "3", features = ["derive"] }
ndarray = "0.15"
ansi_term = "0.12"
ordered-float = "3"
cache-padded = "1.2"
crossbeam-utils = { version = "0.8", default-features = false }
raw-cpuid = "10"
